--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<nav class="navbar">
 			<div class="container">
 				<div class="logo">
-					<a href="https://uploads-ssl.webflow.com/648a657a9e2d83664ceb8bca/665d9470b4c77ad22ab31053_logo.png">
+					<a href="">
 					<img src=
-"https://assets.turbologo.com/blog/en/2019/09/19084953/instagram-logo-illustration.png"
-						alt="img1" height="30px">
+"https://uploads-ssl.webflow.com/648a657a9e2d83664ceb8bca/665d9470b4c77ad22ab31053_logo.png"
+						alt="img1" height="50px">
 					</a>
 				</div>
 				
