--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							</div>
 <!-- post 1 -->
 							
-							<h3>Ayush Agarwal
+							<h3>davidbeckham i kingsfdn
 								<br>
 								<span>Mumbai, India</span>
 						</h3>
