--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 						</a>
 						<a href="#">
 							<p class="message">
-							<b>Raju Modi</b>
+							Raju Modi
 							</p>
 
 						</a>
