--- a/index.html
+++ b/index.html
@@ -31,35 +31,35 @@
 					<div class="status">
 						<div class="image">
 							<img src=
-"\images\emilyblunt.jpg"
+"images/emilyblunt.jpg"
 								alt="img3">
 						</div>
 					</div>
 					<div class="status">
 						<div class="image">
 							<img src=
-"\images\emma.jpeg"
+"images/emma.jpeg"
 								alt="img4">
 						</div>
 					</div>
 					<div class="status">
 						<div class="image">
 							<img src=
-"\images\jonnydepp.jpg"
+"images/jonnydepp.jpg"
 								alt="img5">
 						</div>
 					</div>
 					<div class="status">
 						<div class="image">
 							<img src=
-"\images\julia.jpg"
+"images/julia.jpg"
 								alt="img6">
 						</div>
 					</div>
 					<div class="status">
 						<div class="image">
 							<img src=
-"\images\ryan.webp"
+"images/ryan.webp"
 								alt="img7">
 						</div>
 					</div>
