--- a/index.html
+++ b/index.html
@@ -277,8 +277,14 @@ window.addEventListener("DOMContentLoaded", () => {
 						</div>
 					</div>
 					<div class="imgBx">
+						<!--  
 						<img src="images/beckham-min.jpg"
-							alt="post-1" class="cover">
+							alt="post-1" class="cover"> 
+						-->
+
+						<video controls class="cover">
+  <source src="https://d48dl6cezsco5.cloudfront.net/static/videos/page-UX-intro-movie-v3.mp4" type="video/mp4">
+</video>
 					</div>
 					<div class="bottom">
 						<div class="actionBtns">
