--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@ window.addEventListener("DOMContentLoaded", () => {
 						</div>
 					</div>
 					<div class="imgBx">
-						<img src="images/beckham-min.jpg"
+						<img src="https://uploads-ssl.webflow.com/66598c7ab90ea6b81fce8f26/6659a3d9a55dc6e4914c4b2f_ikea-catalogue-cover-2021-01-1201x1280.jpg"
 							alt="post-1" class="cover">
 					</div>
 					<div class="bottom">
