--- a/index.html
+++ b/index.html
@@ -1561,7 +1561,7 @@ window.addEventListener("DOMContentLoaded", () => {
 						</div>
 					</div>
 					<div class="imgBx">
-						<img src="images/beckham-min.jpg"
+						<img src="https://cdn.dribbble.com/users/5297140/screenshots/13995477/media/3769cfb75e2e53734862cc0a3bc1c732.gif"
 							alt="post-1" class="cover">
 					</div>
 					<div class="bottom">
