--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="initial-scale=1, width=device-width" />
 	<link rel="stylesheet"
 		href="style.css">
 	<title>Instagram Clone</title>
